--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4" id="clockbox"></div>
       <div class="col-md-4 col-sm-4 col-xs-4 text-right">
-      	<a href="mailto:tiafaupurcell03@gmail.com">Hire Me</a>
+      	<a href="mailto:tiafaupurcell03@gmail.com">Contact</a>
       </div>
     </div>
 	</nav>
