added readlist update

--- a/readlist.html
+++ b/readlist.html
@@ -78,6 +78,12 @@
 
   			<div class="column">
   				<div class="column-row col-md-3 col-sm-3 col-xs-12">
+  					<a href="https://itunes.apple.com/us/book/competing-against-luck/id1080332425" target="_blank">
+  						<img src="img/competing_book.png" class="img-responsive">
+  						<div class="p2">Competing...Luck</div>
+  					</a>
+  				</div>
+  				<div class="column-row col-md-3 col-sm-3 col-xs-12">
   					<a href="https://itunes.apple.com/us/book/leadership-self-deception/id365410805" target="_blank">
   						<img src="img/leadership_book.png" class="img-responsive">
   						<div class="p2">Leadership...</div>
@@ -86,13 +92,13 @@
   				<div class="column-row col-md-3 col-sm-3 col-xs-12">
   					<a href="https://itunes.apple.com/us/book/who-moved-my-cheese/id403605836" target="_blank">
   						<img src="img/cheese_book.png" class="img-responsive">
-  						<div class="p2">...Cheese?</div>
+  						<div class="p2">Who...Cheese?</div>
   					</a>
   				</div>
   				<div class="column-row col-md-3 col-sm-3 col-xs-12">
   					<a href="https://itunes.apple.com/us/book/becoming-steve-jobs/id936502684" target="_blank">
   						<img src="img/stevejobs_book.png" class="img-responsive">
-  						<div class="p2">...Steve Jobs</div>
+  						<div class="p2">Becoming...Jobs</div>
   					</a>
   				</div>
   				<div class="column-row col-md-3 col-sm-3 col-xs-12">
