added edit to ventures

--- a/ventures.html
+++ b/ventures.html
@@ -81,13 +81,13 @@
         </div>
 
         <div class="col-md-12">
-          <img src="img/projects_15.jpg" class="img-responsive border-img">
+          <img src="img/projects_16.jpg" class="img-responsive border-img">
           <!-- <div class="logo_center caption">Home Page</div> -->
 
           <div class="caption">
             <div>Verdad Technologies</div>
             <div><span>Date:</span> 2015</div>
-            <div><span>Role:</span> Design Engineer, Founding Engineer</div>
+            <div><span>Role:</span> Founding Team & Product Designer</div>
             <!-- <div><span>Tools:</span>Adobe Ps &amp; Ai, Sketch 3</div> -->
             <div><span>URL:</span> <a href="http://verdadtech.com/" target="_blank">www.verdadtech.com</a></div>
           </div>
