added edit to ventures

--- a/ventures.html
+++ b/ventures.html
@@ -127,7 +127,7 @@
   				<div class="caption">
   					<div>Sweep the Earth</div>
   					<div><span>Date:</span> 2015</div>
-  					<div><span>Role:</span> Designer, Co-founder</div>
+  					<div><span>Role:</span> Co-Founder & Product Development</div>
   					<div><span>Tools:</span>Adobe Ps &amp; Ai, Sketch 3</div>
   					<div><span>URL:</span> <a href="http://www.sweeptheearth.me/" target="_blank">www.sweeptheearth.me</a></div>
   				</div>
