added edit to ventures

--- a/ventures.html
+++ b/ventures.html
@@ -88,7 +88,7 @@
             <div>Verdad Technologies</div>
             <div><span>Date:</span> 2015</div>
             <div><span>Role:</span> Founding Team & Product Designer</div>
-            <!-- <div><span>Tools:</span>Adobe Ps &amp; Ai, Sketch 3</div> -->
+            <div><span>Tools:</span>Sketch 3</div>
             <div><span>URL:</span> <a href="http://verdadtech.com/" target="_blank">www.verdadtech.com</a></div>
           </div>
 
