added url change to Medium URL

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 col-sm-3 col-xs-3">
-					<a href="https://medium.com/@tiafau.purcell" target="_blank">
+					<a href="https://medium.com/@tiafaupurcell" target="_blank">
 						<img src="img/medium_icon.png" class="img-responsive">
 						<p>Medium</p>
 					</a>
